# academic-slides-agent

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  setup.sh
.github/workflows/: ci.yml
examples/: README.md
examples/moe_paper/: paper_config.yaml
prompts/: agent1_generator.md  agent2_evaluator.md  meta_sop.md  rubric_template.md
src/academic_slides_agent/: __init__.py  __main__.py  cli.py  judge_loop.py  keychain.py  validator.py
tests/: test_validator.py
themes/: academic-emerald-4k.css
